--- a/KitchenApp/imgui.ini
+++ b/KitchenApp/imgui.ini
@@ -4,9 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Options]
-Pos=221,450
-Size=339,94
+Pos=402,352
+Size=398,248
 Collapsed=0
+DockId=0x00000004,0
 
 [Window][Render inside IMGUI]
 ViewportPos=486,138
@@ -14,5 +15,21 @@ ViewportId=0xB45043A8
 Size=1248,909
 Collapsed=0
 
+[Window][DockSpace Demo]
+Pos=0,0
+Size=800,600
+Collapsed=0
+
+[Window][KitchenApp]
+Pos=402,19
+Size=398,331
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=163,216 Size=800,581 Split=X Selected=0x118D56BE
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=400,581 CentralNode=1
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=398,581 Split=Y Selected=0x118D56BE
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=398,331 Selected=0x118D56BE
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=398,248 Selected=0xE365E069
 
