--- a/KitchenApp/imgui.ini
+++ b/KitchenApp/imgui.ini
@@ -4,10 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Options]
-Pos=402,352
-Size=398,248
+Pos=433,19
+Size=367,581
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Window][Render inside IMGUI]
 ViewportPos=486,138
@@ -21,15 +21,23 @@ Size=800,600
 Collapsed=0
 
 [Window][KitchenApp]
-Pos=402,19
-Size=398,331
+Pos=0,19
+Size=353,581
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Details]
+Pos=459,19
+Size=341,581
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=294,336 Size=800,581 Split=X Selected=0x118D56BE
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=400,581 CentralNode=1
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=398,581 Split=Y Selected=0x118D56BE
-    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=398,331 Selected=0x118D56BE
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=398,248 Selected=0xE365E069
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=239,292 Size=800,581 Split=X Selected=0x118D56BE
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=457,581 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=353,581 Selected=0x118D56BE
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=102,581 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=363,581 CentralNode=1
+      DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=435,581 Selected=0xE365E069
+  DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=341,581 Selected=0xFC3EA205
 
