--- a/KitchenApp/imgui.ini
+++ b/KitchenApp/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Options]
-Pos=433,19
-Size=367,581
+Pos=730,19
+Size=507,701
 Collapsed=0
 DockId=0x00000002,0
 
@@ -16,26 +16,39 @@ Size=1248,909
 Collapsed=0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=800,600
 Collapsed=0
 
 [Window][KitchenApp]
 Pos=0,19
-Size=800,581
+Size=1739,1358
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x3BC79352,0
 
 [Window][Details]
-Pos=402,19
-Size=398,581
+Pos=912,19
+Size=288,701
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Products]
+Pos=0,19
+Size=362,701
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][MyDockSpace]
+Pos=0,0
+Size=1237,720
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=201,254 Size=800,581 Split=X Selected=0x118D56BE
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=400,581 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=363,581 CentralNode=1 Selected=0x118D56BE
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=435,581 Selected=0xE365E069
-  DockNode    ID=0x00000005 Parent=0x3BC79352 SizeRef=398,581 Selected=0xFC3EA205
+DockSpace       ID=0x04726DD8 Window=0x004E1B88 Pos=320,362 Size=1237,701 Split=X
+  DockNode      ID=0x00000005 Parent=0x04726DD8 SizeRef=362,701 Selected=0x182E3C04
+  DockNode      ID=0x00000006 Parent=0x04726DD8 SizeRef=836,701 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=910,701 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=364,581 CentralNode=1
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=507,581 Selected=0xE365E069
+    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=288,701 Selected=0xFC3EA205
+DockSpace       ID=0x3BC79352 Pos=346,388 Size=800,581 CentralNode=1 Selected=0x118D56BE
 
