A lot of work done

--- a/KitchenApp/imgui.ini
+++ b/KitchenApp/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Options]
-Pos=693,19
-Size=507,701
+Pos=665,19
+Size=535,701
 Collapsed=0
 DockId=0x00000002,0
 
@@ -20,35 +20,89 @@ Size=800,600
 Collapsed=0
 
 [Window][KitchenApp]
-Pos=0,19
-Size=1739,1358
+ViewportPos=463,405
+ViewportId=0x004E1B88
+Pos=0,38
+Size=1200,682
 Collapsed=0
-DockId=0x3BC79352,0
+DockId=0x0000000A,0
 
 [Window][Details]
-Pos=912,19
-Size=288,701
+Pos=0,19
+Size=223,701
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x0000000A,0
 
 [Window][Products]
-Pos=0,19
-Size=362,701
+ViewportPos=-948,424
+ViewportId=0x4ACC380C
+Size=336,211
 Collapsed=0
-DockId=0x00000005,0
 
 [Window][MyDockSpace]
-Pos=0,0
+ViewportPos=463,405
+ViewportId=0x004E1B88
 Size=1200,720
 Collapsed=0
 
+[Window][Recipes]
+ViewportPos=463,405
+ViewportId=0x004E1B88
+Pos=282,38
+Size=353,682
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][CookBook]
+ViewportPos=463,405
+ViewportId=0x004E1B88
+Pos=0,38
+Size=280,682
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][CreateRecipe]
+ViewportPos=-2316,247
+ViewportId=0x7BC2FB04
+Size=532,384
+Collapsed=0
+
+[Window][ProductsDetails]
+ViewportPos=463,405
+ViewportId=0x004E1B88
+Pos=846,38
+Size=354,682
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][CreateProduct]
+ViewportPos=-2085,367
+ViewportId=0x6C3B2FF1
+Size=734,394
+Collapsed=0
+
+[Window][RecipeDetails]
+Pos=857,19
+Size=343,701
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Edit Recipe]
+ViewportPos=-1384,299
+ViewportId=0x6F1524E0
+Size=897,610
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0x04726DD8 Window=0x004E1B88 Pos=87,140 Size=1200,701 Split=X
-  DockNode      ID=0x00000005 Parent=0x04726DD8 SizeRef=362,701 Selected=0x182E3C04
-  DockNode      ID=0x00000006 Parent=0x04726DD8 SizeRef=836,701 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=910,701 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=364,581 CentralNode=1
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=507,581 Selected=0xE365E069
-    DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=288,701 Selected=0xFC3EA205
-DockSpace       ID=0x3BC79352 Pos=346,388 Size=800,581 CentralNode=1 Selected=0x118D56BE
+DockSpace           ID=0x04726DD8 Window=0x004E1B88 Pos=463,443 Size=1200,682 Split=X
+  DockNode          ID=0x00000005 Parent=0x04726DD8 SizeRef=280,682 Selected=0xA85A5B1E
+  DockNode          ID=0x00000006 Parent=0x04726DD8 SizeRef=918,682 Split=X
+    DockNode        ID=0x0000000D Parent=0x00000006 SizeRef=855,1381 Split=X
+      DockNode      ID=0x00000007 Parent=0x0000000D SizeRef=2204,701 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=663,701 Split=X Selected=0xFC3EA205
+          DockNode  ID=0x00000009 Parent=0x00000001 SizeRef=353,1358 Selected=0x74701055
+          DockNode  ID=0x0000000A Parent=0x00000001 SizeRef=563,1358 CentralNode=1 Selected=0x118D56BE
+        DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=535,701 Selected=0xE365E069
+      DockNode      ID=0x00000008 Parent=0x0000000D SizeRef=354,701 Selected=0x6BAEDC77
+    DockNode        ID=0x0000000E Parent=0x00000006 SizeRef=343,1381 Selected=0xF8A8E6E4
 
