--- a/KitchenApp/KitchenApp.vcxproj
+++ b/KitchenApp/KitchenApp.vcxproj
@@ -161,7 +161,6 @@
     <ClCompile Include="src\CookBook.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\ProductFactory.cpp" />
-    <ClCompile Include="src\Recipe.cpp" />
     <ClCompile Include="src\Storage.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -183,13 +182,13 @@
     <ClInclude Include="src\CookBook.h" />
     <ClInclude Include="src\Ingredient.h" />
     <ClInclude Include="src\ProductFactory.h" />
-    <ClInclude Include="src\Recipe.h" />
     <ClInclude Include="src\stb_image.h" />
     <ClInclude Include="src\Storage.h" />
     <ClInclude Include="src\Utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Include\imgui\debuggers\imgui.natstepfilter" />
+    <None Include="recipeList.vic" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="Include\imgui\debuggers\imgui.natvis" />
