--- a/KitchenApp/KitchenApp.vcxproj.filters
+++ b/KitchenApp/KitchenApp.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClCompile Include="src\ProductFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\Recipe.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Storage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -119,9 +116,6 @@
     <ClInclude Include="src\ProductFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\Recipe.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Storage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -131,6 +125,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Include\imgui\debuggers\imgui.natstepfilter" />
+    <None Include="recipeList.vic" />
   </ItemGroup>
   <ItemGroup>
     <Natvis Include="Include\imgui\debuggers\imgui.natvis" />
